--- a/static/subjective.css
+++ b/static/subjective.css
@@ -1,12 +1,17 @@
+@font-face {
+  font-family: Zekton;
+  src: url("../static/zekton_rg.ttf");
+}
 body {
   background-color: black;
   color: white;
-  font-family: 'Gill Sans', cursive;
-  height: 100vh;
+  font-family: 'Zekton', cursive;
+  height: 100vh !important;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 label{
   font-size: 20px;
 }
@@ -16,8 +21,8 @@ label{
   margin-right: 20px;
 }
 div.container {
-  width: 90%;
-  height: auto;
+  width: 70% !important;
+  /* height: auto; */
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -28,11 +33,16 @@ div.footer{
   display: none !important;
 }
 div.timer {
-  font-family: 'Press Start 2P', cursive;
-  font-size: 1.5rem;
+  font-family: 'Zekton', cursive;
+  font-size: 2.7rem;
   position: absolute;
     right: 5%;
-    bottom: 10%;
+    bottom: 5% !important;
+}
+span#hours.hours,span#minutes.minutes,span#seconds.seconds{
+  background: rgba(1,1,1,0.7);
+  padding: 10px 10px;
+  border-radius: 20px;
 }
 
 .nes-btn {
@@ -40,19 +50,45 @@ div.timer {
   background-color: #A9EAA9;
 
 }
+form#ans{
+  margin-top: 180px !important;
+}
 
+label#question-text{
+  font-weight: bolder !important;
+}
 
+.nes-container{
+  background: rgba(1,1,1,1) !important;
+}
+
+.containss{
+  min-height: 100px !important;
+}
 @media screen and (max-width: 500px) {
   .question {
+    font-weight: bolder !important;
   font-size: 0.9rem;
   padding-bottom: 10px;
 }
-.containers{
+form#ans{
+  margin-top: 150px !important;
+}
+/* label#question-text{
+  margin-top: 300px !important;
+  font-weight: bolder !important;
+} */
+.nes-container{
+
   margin-top: 0px !important;
 }
+/* 
+div.containers{
+  margin-top: 0px !important;
+} */
   div.timer {
-  font-size: 1rem;
-  bottom: 0px !important;
+  font-size: 1.7rem;
+  bottom: 20px !important;
 }
   .nes-field label {
     font-size: 1rem;
